project/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-deploy
  namespace: dev
spec:
  selector:
    app: my-deploy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
