project/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: argo.application
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server1
                port:
                  number: 8080
